--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://chiranjeebhub.github.io/myPortfolio",
   "dependencies": {
+    "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
     "loadjs": "^3.6.1",
     "react": "^16.8.6",
