--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "loadjs": "^3.6.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-facebook": "^8.0.4",
     "react-mdl": "^1.11.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0"
